[project]
name = "school-inventory-dashboard-python"
version = "0.1.0"
description = "Synthetic equipment inventory dashboard with status metrics by lab, charts, and HTML report export."
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Alberto Mateus P. da Gama" }]

[tool.pytest.ini_options]
pythonpath = ["."]
